--- a/index.html
+++ b/index.html
@@ -219,34 +219,47 @@
     </main>
   <!----------Footer--->
       <footer>
-  
-  <!--Project cards-->
-  
-
-        <div class="card w-75 mb-3">
-  <div class="card-body">
-    <h5 class="card-title">My API Project</h5>
-    <p class="card-text">A page which sources many different APIS for its content. Links to view project code provided on project page.</p>
-    <a href="https://sem2093.github.io/apiproject/" class="btn btn-primary">View Project Page</a>
+        <!--Project accordian-->
+        <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        My API Project
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>A page which sources many different APIS for its content. Links to view project code provided on project page.</strong> 
+      <a href="https://sem2093.github.io/apiproject/" class="btn btn-primary">View Project Page</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        My react Project
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Demonstration of ability to use the React Framework.</strong> 
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Harvard Python Course Work
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Repository full of course work from Harvard CS50 Python.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
   </div>
 </div>
-
-        <div class="card w-75 mb-3">
-  <div class="card-body">
-    <h5 class="card-title">My React Project</h5>
-    <p class="card-text">Demonstration of ability to use the React Framework.</p>
-    <a href="" class="btn btn-primary">View Project Page</a>
-  </div>
-</div>
-
-         <div class="card w-75 mb-3">
-  <div class="card-body">
-    <h5 class="card-title">Harvard Python Course Work</h5>
-    <p class="card-text"> Repository full of course work from Harvard CS50 Python.</p>
-    <a href="" class="btn btn-primary">View Repository</a>
-  </div>
-</div>
-        </footer>
+   </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="index.js"></script>
 </body>
