--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
 <nav class="navbar bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><h1 class="display-1">Steven Miller<small class="text-body-secondary"> Developer</small></h1></a>
+    <a class="navbar-brand" href="#"><h1 class="display-1">Steven Miller<br><small class="text-body-secondary"> Developer</small></h1></a>
   </div>
 </nav>
 
