--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   <!----------Footer--->
       <footer>
         <!--Project accordian-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Projects</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
