--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
   </head>
-  <body class="bg-primary-subtle">
+  <body>
   <header>   
     <nav class="navbar sticky-top bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded">
   <div class="container-fluid">
