--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <header>   
-    <nav class="navbar sticky-top bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+    <nav class="navbar sticky-top bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><div class="btn-group" role="group" aria-label="Basic outlined example">
   <button type="button" class="btn btn-outline-secondary" onclick="darkMode()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill" viewBox="0 0 16 16">
@@ -31,7 +31,7 @@
   </header>
 
     <main>
-<nav class="navbar bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+<nav class="navbar bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><h1 class="display-1">Steven Miller<br><small class="text-body-secondary"> Developer</small></h1></a>
   </div>
@@ -188,7 +188,7 @@
     
  
     
-     <nav class="navbar sticky-bottom bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+     <nav class="navbar sticky-bottom bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
   <div class="container-fluid">
     <a class="navbar-brand" href="#offcanvasSkills" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSkills" aria-controls="offcanvasSkills"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-bar-chart-fill" viewBox="0 0 16 16">
   <path d="M1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3zm5-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2z"/>
@@ -224,7 +224,7 @@
   <!----------Footer--->
       <footer>
         <!--Project nav-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded ">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded border ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Projects</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
