--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <header>   
-    <nav class="navbar sticky-top bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
+    <nav id="navtest2" class="navbar shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><div class="btn-group" role="group" aria-label="Basic outlined example">
   <button type="button" class="btn btn-outline-secondary" onclick="darkMode()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill" viewBox="0 0 16 16">
@@ -28,7 +28,7 @@
   </header>
 
     <main>
-<nav class="navbar bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
+<nav id="navtest1" class="navbar shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
   <div id="test" class="container-fluid">
     <a class="navbar-brand" href="#"><h1 class="display-1">Steven Miller<br><small class="text-body-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-square" viewBox="0 0 16 16">
   <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -188,7 +188,7 @@
     
  
     
-     <nav class="navbar sticky-bottom bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
+     <nav id="navtest3" class="navbar shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
   <div class="container-fluid">
     <a class="navbar-brand" href="#offcanvasSkills" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSkills" aria-controls="offcanvasSkills"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-bar-chart-fill" viewBox="0 0 16 16">
   <path d="M1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3zm5-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2z"/>
@@ -224,7 +224,7 @@
   <!----------Footer--->
       <footer>
         <!--Project nav-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg p-3 mb-5 bg-body-tertiary rounded border ">
+        <nav id="navtest4" class="navbar navbar-expand-lg shadow-lg p-3 mb-5 bg-body-tertiary rounded border ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder-fill" viewBox="0 0 16 16">
   <path d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3zm-8.322.12C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139z"/>
